--- a/site/index2.html
+++ b/site/index2.html
@@ -8,6 +8,6 @@
 <body>
 <h1>Hello Coursera!</h1>
 	<h2>This is an excellent course!<h2>
-		<h3>this is interesting<h3>
+		<h3>this is interesting. I really think this.<h3>
 </body>
 </html>
